--- a/register.html
+++ b/register.html
@@ -13,13 +13,20 @@
         <hr>
         <form>
   <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <label for="exampleInputEmail1" class="form-label">Full Name</label>
+    <input type="email" class="form-control" id="fullname" aria-describedby="emailHelp">
   </div>
   <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+    <input type="email" class="form-control" id="phonenumber" aria-describedby="emailHelp">
+  </div>
+  <div class="mb-3">
+    <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+  </div>
     <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <input type="password" class="form-control" id="password">
   </div>
   <div>
     <p class="para1">Already Have an account? <a href="./login.html"><b>Login with valid Credentials</b></p>
