--- a/register.html
+++ b/register.html
@@ -11,14 +11,14 @@
     <section class="container mt-5">
         <h1>REGISTER</h1>
         <hr>
-        <form>
+        <form onsubmit="signUp(); return false">
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Full Name</label>
-    <input type="email" class="form-control" id="fullname" aria-describedby="emailHelp">
+    <input type="text" class="form-control" id="fullname" aria-describedby="emailHelp">
   </div>
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Phone Number</label>
-    <input type="email" class="form-control" id="phonenumber" aria-describedby="emailHelp">
+    <input type="text" class="form-control" id="phonenumber" aria-describedby="emailHelp">
   </div>
   <div class="mb-3">
     <div class="mb-3">
